--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       float: left;
       width: 50%;
       padding: 10px;
-      height: 300px; /* Should be removed. Only for demonstration */
+      /* height: 300px; Should be removed. Only for demonstration */
     }
     
     /* Clear floats after the columns */
@@ -24,33 +24,53 @@
 </head>
 
 <body>
+    <h1>Y-EARTH Sun Calculator</h1>
     <div class="row">
         <div class="column">
-            <div>
-                <h2>Describe questions in sentences</h2>
-                <p>Write any number of questions, each one in a new line.</p>
-                <textarea form="questions" rows="10" cols="90"></textarea><br><br>     
-                <button>Calculate>></button>
-            </div>
-            <div>
-                <h2>Or by filling in a form </h2>
-                <h4>Your questions</h4>
-                <label for="Sunrise">Sunrise</label>
-                    <input type="checkbox" name="Sunrise" id="Sunrise" value="Sunrise">
-                <label for="Sunset">Sunset</label>
-                    <input type="checkbox" name="Sunset" id="Sunset" value="Sunset">
-                <label for="Height">Height</label>
-                    <input type="checkbox" name="Height" id="Height" value="Height">
-                <label for="Direction">Direction</label>
-                    <input type="checkbox" name="Direction" id="Direction" value="Direction"><br>
-                <h4>Given conditions</h4>
-                <label for="Longitude">Longitude</label><input type="text" name="Longitude" id="Longitude"><br>
-                <label for="Latitude">Latitude</label><input type="text" name="Latitude" id="Latitude"><br>
-                <label for="Date">Date</label><input type="date" name="Date" id="Date"><br>
-                <label for="Time">Time</label><input type="time" name="Time" id="Time"><br>
-                <label for="GMT">GMT</label><input type="number" name="GMT" id="GMT"><br>    
-                <button>Calculate>></button>
-            </div>
+            <form action="/" method="post" id="questions">
+                <div>
+                    <form action="/maps" method="post">
+                        <b><label for="location">Find location on maps</label></b>
+                        <input type="text" name="location">
+                        <button type="submit">Search</button>
+                    </form>
+                    <h2>Describe all questions in words.</h2>
+                    <p>Write any number of questions, each one in a new line. Each question can contain multiple
+                        queries (E.g. sunrise and sunset, height and direction, etc.) if given same context.
+                    </p>
+                    <textarea name="taskDesc" rows="5" cols="90"></textarea><br><br>     
+                    <button type="submit">Submit question>></button>
+                </div>
+                <div>
+                    <h2>Alternatively, fill in question details.</h2>
+                    <p>If there is anything missing in your above descriptions, you can use this form to add information.
+                        Note: if you ask multiple questions above, the detail you fill in will apply to ALL questions.
+                    </p>
+                    <b>You are asking for:</b><br>
+                    <label for="Sunrise">Sunrise</label>
+                        <input type="checkbox" name="Sunrise" value=7>
+                    <label for="Sunset">Sunset</label>
+                        <input type="checkbox" name="Sunset" value=8>
+                    <label for="Height">Height</label>
+                        <input type="checkbox" name="Height" value=1>
+                    <label for="Direction">Direction</label>
+                        <input type="checkbox" name="Direction" value=2>
+                    <label for="Date">Date</label>
+                        <input type="checkbox" name="QDate" value=4>
+                    <label for="Time">Time</label>
+                        <input type="checkbox" name="QTime" value=3>
+                    
+                    <br><br><b>Given conditions</b><br>
+                    <label for="Longitude">Longitude:</label><input type="text" name="Longitude"></label> 
+                        <label for="East">East</label><input type="radio" name="EW" value="East"><label for="West">West</label><input type="radio" name="EW" value="West"><br>
+                    <label for="Latitude">Latitude:</label><input type="text" name="Latitude"></label>
+                        <label for="North">North</label><input type="radio" name="NS" value="North"><label for="South">South</label><input type="radio" name="NS" value="South"><br>
+                    <label for="Date">Date</label><input type="date" name="Date">
+                    <label for="Time">Time</label><input type="time" name="Time">
+                    <label for="GMT">GMT</label><input type="number" name="GMT"><br><br>    
+                    <button type="submit">Submit form>></button>
+                </div>
+            </form>
 
         </div>
         <div class="column">
