--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <h1>Y-EARTH Sun Calculator</h1>
     <div class="row">
         <div class="column">
-            <form action="/maps" method="post">
+            <form action="/maps" method="post" target="_blank">
                 <b><label for="location">Find location on maps</label></b>
                 <input type="text" name="location">
                 <button type="submit">Search</button>
