--- a/templates/maps.html
+++ b/templates/maps.html
@@ -4,5 +4,6 @@
 </head>
 <body>
     <p>Searching "{{location}}"" on maps...</p>
+    <img src="yearth.png" alt="sun calculator" height="50%" width="50%"/>
 </body>
 
